NetBSD Problem Report #44377

From www@NetBSD.org  Wed Jan 12 17:48:09 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 5198C63B89F
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 12 Jan 2011 17:48:09 +0000 (UTC)
Message-Id: <20110112174808.5005A63B89A@www.NetBSD.org>
Date: Wed, 12 Jan 2011 17:48:08 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: union whiteouts don't work on ffs -o log
X-Send-Pr-Version: www-1.0

>Number:         44377
>Category:       kern
>Synopsis:       union whiteouts don't work on ffs -o log
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 12 17:50:00 +0000 2011
>Closed-Date:    Wed Aug 03 16:01:36 +0000 2011
>Last-Modified:  Wed Aug 03 16:01:36 +0000 2011
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
(gdb) bt
#0  0xbb8710d7 in _lwp_kill () from /usr/lib/libc.so.12
#1  0xbb87108e in raise () from /usr/lib/libc.so.12
#2  0xbb870914 in abort () from /usr/lib/libc.so.12
#3  0xbb8c7c01 in rumpuser_exit (rv=0) at rumpuser.c:517
#4  0xbb963490 in cpu_reboot (howto=4, bootstr=0x0) at rump.c:530
#5  0xbb931ed8 in panic (
    fmt=0xbb96b678 "kernel %sassertion \"%s\" failed: file \"%s\", line %d")
    at /usr/allsrc/src/sys/rump/librump/rumpkern/../../../kern/subr_prf.c:302
#6  0xbb9156ec in kern_assert (t=0xbb9e383b "diagnostic ", 
    f=0xbb9e37f8 "/usr/allsrc/src/sys/rump/librump/rumpvfs/../../../kern/vfs_wapbl.c", l=1617, e=0xbb9e3e30 "rw_lock_held(&wl->wl_rwlock)")
    at /usr/allsrc/src/sys/rump/librump/rumpkern/../../../lib/libkern/kern_assert.c:50
#7  0xbb9af13e in wapbl_jlock_assert (wl=0xbb6bf110)
    at /usr/allsrc/src/sys/rump/librump/rumpvfs/../../../kern/vfs_wapbl.c:1617
#8  0xbb9ad830 in wapbl_add_buf (wl=0xbb6bf110, bp=0xbb6ca840)
    at /usr/allsrc/src/sys/rump/librump/rumpvfs/../../../kern/vfs_wapbl.c:919
#9  0xbb9df7b8 in bdwrite (bp=0xbb6ca840)
    at /usr/allsrc/src/sys/rump/librump/rumpvfs/../../../kern/vfs_bio.c:918
#10 0xbb9df3cf in bwrite (bp=0xbb6ca840)
    at /usr/allsrc/src/sys/rump/librump/rumpvfs/../../../kern/vfs_bio.c:805
#11 0xbb9df605 in vn_bwrite (v=0xbfbfcc54)
    at /usr/allsrc/src/sys/rump/librump/rumpvfs/../../../kern/vfs_bio.c:883
#12 0xbb928302 in VOP_BWRITE (bp=0xbb6ca840)
    at /usr/allsrc/src/sys/rump/librump/rumpkern/../../../kern/vnode_if.c:86
#13 0xbbb9d8c9 in ufs_direnter (dvp=0xbb67e198, tvp=0x0, dirp=0xbb6fbe70, 
    cnp=0xbfbfce18, newdirbp=0x0)
    at /usr/allsrc/src/sys/rump/fs/lib/libffs/../../../../ufs/ufs/ufs_lookup.c:936
#14 0xbbbaafe6 in ufs_whiteout (v=0xbfbfcdbc)
    at /usr/allsrc/src/sys/rump/fs/lib/libffs/../../../../ufs/ufs/ufs_vnops.c:907
#15 0xbb929d3a in VOP_WHITEOUT (dvp=0xbb67e198, cnp=0xbfbfce18, flags=1)
    at /usr/allsrc/src/sys/rump/librump/rumpkern/../../../kern/vnode_if.c:1353
#16 0xbbb0a38b in union_mkwhiteout (um=0xbb6d3280, dvp=0xbb67e198, 
    cnp=0xbfbfcf08, path=0xbb602218 "tensti")
    at /usr/allsrc/src/sys/rump/fs/lib/libunion/../../../../fs/union/union_subr.c:921
#17 0xbbb075e4 in union_remove (v=0xbfbfceac)
    at /usr/allsrc/src/sys/rump/fs/lib/libunion/../../../../fs/union/union_vnops.c:1169
#18 0xbb92908e in VOP_REMOVE (dvp=0xbb67e040, vp=0xbb6f9f0c, cnp=0xbfbfcf08)
    at /usr/allsrc/src/sys/rump/librump/rumpkern/../../../kern/vnode_if.c:728
#19 0xbb9c38d0 in do_sys_unlink (arg=0x8069e28 "tensti", seg=UIO_USERSPACE)
    at /usr/allsrc/src/sys/rump/librump/rumpvfs/../../../kern/vfs_syscalls.c:2273
#20 0xbb9c37b8 in sys_unlink (l=0xb9cb3b00, uap=0xbfbfcfdc, retval=0xbfbfcfd4)
    at /usr/allsrc/src/sys/rump/librump/rumpvfs/../../../kern/vfs_syscalls.c:2216
#21 0xbb958e67 in sy_call (sy=0xbb9794f8, l=0xb9cb3b00, uap=0xbfbfcfdc, 
    rval=0xbfbfcfd4)
    at /usr/allsrc/src/sys/rump/librump/rumpkern/../../../sys/syscallvar.h:61
#22 0xbb958e28 in rsys_syscall (num=10, data=0xbfbfcfdc, dlen=4, 
    retval=0xbfbfcfd4) at rump_syscalls.c:42
#23 0xbb95913e in rump_sys_unlink (path=0x8069e28 "tensti")
    at rump_syscalls.c:180
#24 0x0804c941 in basic (tc=0x806e7fc, mp=0x8069e83 "/mnt") at t_union.c:108
#25 0x0804ced9 in atfu_ffslog_basic_body (tc=0x806e7fc) at t_union.c:116
#26 0x08065dad in atf_tc_run ()
#27 0x08064c56 in atf_tp_main ()
#28 0x0804da95 in main (argc=858980355, argv=0x1) at t_union.c:118
(gdb) quit

>How-To-Repeat:
run tests/fs/vfs/t_union
(to be added soon'ish)
>Fix:

>Release-Note:

>Audit-Trail:
From: "Antti Kantee" <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44377 CVS commit: src/tests/fs
Date: Wed, 12 Jan 2011 21:13:27 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Wed Jan 12 21:13:27 UTC 2011

 Modified Files:
 	src/tests/fs/union: Makefile
 	src/tests/fs/vfs: Makefile
 Added Files:
 	src/tests/fs/vfs: t_union.c
 Removed Files:
 	src/tests/fs/union: t_basic.c

 Log Message:
 Move basic unionfs test from fs/union to fs/vfs and make it test
 all whiteout-supporting file systems with the file system in question
 as the upper layer.  Also, add an unlink to the test to see if
 whiteouts are really working.

 ffslog_basic is the test case for PR kern/44377


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/tests/fs/union/Makefile
 cvs rdiff -u -r1.6 -r0 src/tests/fs/union/t_basic.c
 cvs rdiff -u -r1.14 -r1.15 src/tests/fs/vfs/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/fs/vfs/t_union.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Antti Kantee" <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44377 CVS commit: src/tests/fs/vfs
Date: Wed, 12 Jan 2011 22:42:25 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Wed Jan 12 22:42:24 UTC 2011

 Modified Files:
 	src/tests/fs/vfs: t_union.c

 Log Message:
 xfail for PR kern/44377


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/tests/fs/vfs/t_union.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44377 CVS commit: src
Date: Wed, 3 Aug 2011 10:03:52 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Wed Aug  3 10:03:52 UTC 2011

 Modified Files:
 	src/sys/ufs/ufs: ufs_vnops.c
 	src/tests/fs/vfs: t_union.c

 Log Message:
 Make whiteouts work on journaling ffs file system by adding the missing
 UFS_WAPBL_BEGIN() / UFS_WAPBL_END() around CREATE and DELETE ops.

 Fixes PR #44377 (union whiteouts don't work on ffs -o log)


 To generate a diff of this commit:
 cvs rdiff -u -r1.201 -r1.202 src/sys/ufs/ufs/ufs_vnops.c
 cvs rdiff -u -r1.5 -r1.6 src/tests/fs/vfs/t_union.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Wed, 03 Aug 2011 16:01:36 +0000
State-Changed-Why:
Fixed in tree with rev. 1.202 of src/sys/ufs/ufs/ufs_vnops.c


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.